<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailAct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/player_profile"
            app:layout_constraintEnd_toStartOf="@+id/my_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_rating"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="25sp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/player_profile"/>

        <ImageView
            android:id="@+id/action_share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/share"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_share"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/player_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/my_profile"
            app:tint="?attr/colorOnPrimary"/>


        <ImageView
            android:id="@+id/player_profile"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_player"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_profile" />

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_profile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/overall_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="26sp"/>

                <TextView
                    android:id="@+id/overall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginStart="5dp"
                    android:text="@string/ovr1"
                    android:textColor="@color/light_gray"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/number_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/name_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/flag"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/flag"/>

                <TextView
                    android:id="@+id/position_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/age"
                    android:textColor="@color/light_gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/age_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/foot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginStart="70dp"
                    android:text="@string/foot"
                    android:textColor="@color/light_gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/foot_player"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/height"
                    android:textColor="@color/light_gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/height_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/weight"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/light_gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/weight_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/contract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/contract"
                    android:textColor="@color/light_gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/contract_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="14sp"
                android:justificationMode="inter_word"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
